--- a/views/home.erb
+++ b/views/home.erb
@@ -1,9 +1,21 @@
-<div class="container">
-  <h3>Display Users or Products?</h3>
-  <div class="buttons">
-    <ul>
-      <li><a class="btn btn-primary" href="/users">Users</a></li>
-      <li><a class="btn btn-primary" href="/products">Products</a></li>
-    </ul>
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Sinatra Store</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+  </head>
+  <body class="home">
+    <div class="main">
+      <h1>Sinatra</h1>
+      <p>The store of curiously random stuff</p>
+      <img src="/images/logo.png" />
+      <h2><a href="/users">Users</a>
+      <a href="/products">Products</a></h2>
+    </div>
+    </div>
+  </body>
+</html>
